force-app/main/default/objects/ADM_Priority_Override__c/ADM_Priority_Override__c.object-meta.xml
<CustomObject>
    <description>Used to track the exception reason for a priority override</description>
    <label>Priority Override</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>