force-app/main/default/objects/ADM_Priority_Override__c/fields/Priority_Default__c.field-meta.xml
<CustomField>
    <fullName>Priority_Default__c</fullName>
    <label>Priority (default)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>