force-app/main/default/objects/ADM_Priority_Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Priority_Override_Explanation__c</columns>
    <columns>Work__c</columns>
    <columns>Priority__c</columns>
    <columns>Priority_Default__c</columns>
    <columns>Priority_Mapping__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>